Issue #5: formLayout CSS fix

--- a/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
+++ b/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
@@ -33,6 +33,15 @@
     margin-right: 0px;
 }
 
+.form-horizontal.cf-formlayout > .cf-formlayout-row > .cf-formlayout-group > .cf-formlayout-cell > .btn {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.form-horizontal.cf-formlayout > .cf-formlayout-row > .cf-formlayout-group > .cf-formlayout-cell > .btn:first-child {
+    margin-left: 0px;
+}
+
 .form-horizontal.cf-formlayout > .cf-formlayout-buttonbar > :first-child {
     margin-left: 0px;
 }
