--- a/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
+++ b/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
@@ -86,6 +86,71 @@
     margin-bottom: 20px;
 }
 
+/* copied from original selector
+*/
+.dropdown-menu {
+    background-clip: padding-box;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
+    display: initial; /* overridden (would not render otherwise) */
+    float: left;
+    font-size: 14px;
+    left: 0;
+    list-style: outside none none;
+    margin: 2px 0 0;
+    min-width: 160px;
+    padding: 5px 0;
+    position: inherit; /* overridden (would not update label otherwise) */
+    text-align: left;
+    top: 100%;
+    z-index: 1000;
+}
+
+/* copied from original selector
+   because we cannot adhere to its exact child element specification with PrimeFaces */
+.dropdown-menu > li {
+    clear: both;
+    color: #333;
+    display: block;
+    font-weight: 400;
+    line-height: 1.42857;
+    padding: 3px 20px;
+    white-space: nowrap;
+}
+.dropdown-menu > li:focus, .dropdown-menu > li:hover {
+    background-color: #f5f5f5;
+    color: #262626;
+    text-decoration: none;
+}
+.dropdown-menu > .active, .dropdown-menu > .active:focus, .dropdown-menu > .active:hover {
+    background-color: #337ab7;
+    color: #fff;
+    outline: 0 none;
+    text-decoration: none;
+}
+.dropdown-menu > .disabled, .dropdown-menu > .disabled:focus, .dropdown-menu > .disabled:hover {
+    color: #777;
+}
+.dropdown-menu > .disabled:focus, .dropdown-menu > .disabled:hover {
+    background-color: transparent;
+    background-image: none;
+    cursor: not-allowed;
+    text-decoration: none;
+}
+
+.ui-selectonemenu.btn.dropdown-toggle {
+    padding-bottom: 2px;
+    margin: 0px;
+}
+
+.ui-selectonemenu-trigger > .ui-icon.fa {
+    text-indent: 0px;
+    margin-left: -10px;
+    margin-top: 6px;
+}
+
 /* copied from original .paginator... selector
    because we cannot adhere to its exact child element specification with PrimeFaces */
 .pagination {
@@ -188,6 +253,10 @@
 .ui-state-disabled {
     /* override PrimeFaces !important setting */
     cursor: not-allowed !important;
+}
+
+.ui-selectonemenu, .dropdown-menu {
+    width: 100%;
 }
 
 /*** Font Awesome fixes ***/
