Issue #18: StyleClassChangeRenderKit: Support for p:selectOneMenu added

--- a/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
+++ b/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
@@ -255,7 +255,7 @@
     cursor: not-allowed !important;
 }
 
-.ui-selectonemenu, .dropdown-menu {
+.form-horizontal .ui-selectonemenu {
     width: 100%;
 }
 
