--- a/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
+++ b/src/main/resources/META-INF/resources/crudfaces/crudfaces.css
@@ -221,6 +221,17 @@
     padding-top: 0px;
 }
 
+/* copied from Bootstrap .form-control:focus selector */
+.form-control.ui-state-focus {
+    border-color: #66afe9;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+    outline: 0 none;
+}
+
+.ui-chkbox-box.form-control {
+  padding: 0px;
+}
+
 /*** PrimeFaces fixes ***/
 /*** ================ ***/
 .ui-datatable .ui-datatable-header {
